<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Interfaz_registro_01</string>
    <string name="introduir_registre">Introduir nou registre</string>
    <string name="nom">Nom</string>
    <string name="cognom">Congnom</string>
    <string name="action_settings">Settings</string>
    <string name="radio_male">Home</string>
    <string name="radio_female">Dona</string>
    <string name="trabaja">Treballa</string>
    <string name="estudia">Estudia</string>
    <string name="estudis_univ">Estudis Universitaris</string>
    <string name="pesou">Pes</string>
    <string name="title_activity_resultado">resultado</string>
    <string name="hello_world">Hello world!</string>

</resources>
