<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Interfaz_registro_01"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Interfaz_registro_01"
        android:orientation="vertical">

    <TextView
        android:text="@string/introduir_registre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="#ff005a5b"
        android:textStyle="bold"
        android:fontFamily="Impact"
        />

    <EditText
        android:hint="@string/nom"
        android:layout_width="300px"
        android:layout_height="100px"
        android:textSize="14dp"
        android:id="@+id/Name"
        />

    <EditText
        android:hint="@string/cognom"
        android:layout_width="300px"
        android:layout_height="100px"
        android:textSize="14dp"
        android:id="@+id/Surname"
        />

    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radiohome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_male"
            android:textSize="14dp"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radionoia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_female"
            android:textSize="14dp"/>
    </RadioGroup>
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Interfaz_registro_01"
        android:orientation="horizontal">

        <CheckBox android:id="@+id/trab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trabaja"
            android:textSize="14dp"/>

        <CheckBox android:id="@+id/est"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estudia"
            android:textSize="14dp"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Interfaz_registro_01"
        android:orientation="horizontal">

        <TextView
            android:text="@string/estudis_univ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#ef313131"
            android:textStyle="normal"
            android:fontFamily="Impact"
            />

        <ToggleButton
            android:id="@+id/togglebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="Vibrate on"
            android:textOff="Vibrate off"
            android:onClick="onToggleClicked"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Interfaz_registro_01"
        android:orientation="horizontal">

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Peso"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pesou"
            android:id="@+id/Pes"
            />
    </LinearLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Interfaz_registro_01"
        android:orientation="horizontal">

        <EditText
            android:hint="Data de naixement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ee4b4b4b"
            android:textStyle="normal"
            android:fontFamily="Impact"
            android:id="@+id/data"
            />

    </LinearLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Interfaz_registro_01"
        android:orientation="horizontal">

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="Registrar"
            android:layout_marginLeft="20px"
            android:id="@+id/Boton"
            android:background="#ff00abac"
            android:textColor="#ff005a5b"
            android:onClick="enviar"
            />

    </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>

